grafana/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - teslamate.xmple.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: teslamate
          kind: Service
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
