grafana/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`teslamate.xmple.io`) && PathPrefix(`/grafana/`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: grafana-stripprefix
        - name: forwardauth-authelia
          namespace: authelia
  tls:
    secretName: teslamate-tls
    options:
      name: mintls13
      namespace: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /grafana
